--- a/css/base.css
+++ b/css/base.css
@@ -46,7 +46,8 @@
             font-family: 'Montserrat', sans-serif;
             font-weight: 500;
 			font-size: 50px;
-			line-height: 150px;
+			line-height: 50px;
+            margin-bottom: 70px;;
             letter-spacing: 2pt;
             text-transform: uppercase;
             text-align: center;
@@ -54,10 +55,28 @@
 
 		h3 {
 			font-family: 'Montserrat', sans-serif;
-            font-weight: 400;
+            font-weight: 500;
 			font-size: 28px;
 			line-height: 22px;
             letter-spacing: 0.03em;
+            color: #fff;
+			}
+
+		h4 {
+			font-family: 'Montserrat', sans-serif;
+            font-weight: 500;
+			font-size: 20px;
+			line-height: 22px;
+            letter-spacing: -.025em;
+            color: #fff;
+			}
+
+		h5 {
+			font-family: 'Montserrat', sans-serif;
+            font-weight: 500;
+			font-size: 18px;
+			line-height: 15px;
+            letter-spacing: 0.2em;
             color: #fff;
 			}
 
@@ -155,29 +174,30 @@
 
 /* Buttons */
 
-		.button {
+
+
+        .button a:link, .button a:visited {
 			display: inline-block;
-			padding: 10px 25px;
+			padding: 20px 40px;
 			text-align:center;
-            font-family: 'Linux Biolinum', serif;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 400;
             text-transform:uppercase;
             letter-spacing:0.1em;
-            color:#fff;
-			border-radius:10px;
+			border-radius:100px;
 			cursor: pointer;
-            background-color:#A4391D;
+            background-color:#2A2233;
+            margin: 40px 0 40px 0;
+            color: #ccc;
 			}
 
-		.button:link, .button:visited {
-			color: #fff;
-			text-decoration:none;
-			}
 
-		.button:hover, .button:active {
-			color: #ff6600;
+        .button:hover, .button a:hover, .button a:active {
+            color: #ff6600;
 			text-decoration:none;
-			border-radius:10px;
-			}
+            transform: scale(1.05); 
+            transition: all .2s ease;}
+
 
 
 /* Miscellaneous */
@@ -207,6 +227,14 @@
 			clear: both;
 			}
 
+        .noselect { 
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+}}
 
 
 
