--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,14 @@ nav li a:hover, nav li a:active {
 .hero-slide {
   width: 100%;
   background-color: #000;
-  height:700px;
+  min-height:450px;
+  max-height:900px;
   overflow: hidden;
 }
 
 .hero-txt {
     position: absolute;
-    top: 100px;
+    top: 70px;
     text-align: center;
     z-index: 99;
     width:940px;
@@ -82,7 +83,7 @@ nav li a:hover, nav li a:active {
 .cta {
     position: absolute;
     font-weight: 500;
-    top: 600px;
+    top: 400px;
     float: center;
     text-align: center;
     z-index: 99;
@@ -91,7 +92,6 @@ nav li a:hover, nav li a:active {
     font-size: 1.2em;
     line-height: 1.6em;
 }
-
 
 
 /* ---------------------------------------------------------------- */
